# Timer_Qt

./: CMakeLists.txt  Date.cpp  Date.h  Time.cpp  claase_per_provare_googleTest.cpp
Formats/: Timer.ui  mainwindow.ui
Headers/: Clock.h  Date.h  Observer.h  Subject.h  Time.h  Timer.h  claase_per_provare_googleTest.h  mainwindow.h
Sources/: Clock.cpp  Date.cpp  Time.cpp  Timer.cpp  claase_per_provare_googleTest.cpp  main.cpp  mainwindow.cpp
test/: CMakeLists.txt  runAllTests.cpp  testClaase_per_provare_googleTest.cpp  testClock.cpp  testDate.cpp  testTime.cpp
